--- a/org-mode.cabal
+++ b/org-mode.cabal
@@ -14,20 +14,22 @@ extra-source-files:
   ChangeLog.md
 
 common commons
-  default-language: Haskell2010
+  default-language:   Haskell2010
+  default-extensions: OverloadedStrings
   ghc-options:
     -Wall -Wpartial-fields -Wincomplete-record-updates
     -Wincomplete-uni-patterns -Widentities
 
   build-depends:
-    , base  >=4.12 && <5
+    , base        >=4.12 && <5
+    , megaparsec  >=7    && <8
     , text
 
 library
   import:          commons
   hs-source-dirs:  lib
   exposed-modules: Data.Org
-  build-depends:   megaparsec ==7.*
+  build-depends:   parser-combinators ^>=1.1
 
 test-suite org-mode-test
   import:         commons
@@ -35,4 +37,7 @@ test-suite org-mode-test
   hs-source-dirs: test
   main-is:        Test.hs
   ghc-options:    -threaded -rtsopts -with-rtsopts=-N
-  build-depends:  org-mode
+  build-depends:
+    , org-mode
+    , tasty        ^>=1.2
+    , tasty-hunit  ^>=0.10
