--- a/org-mode.cabal
+++ b/org-mode.cabal
@@ -22,14 +22,14 @@ common commons
 
   build-depends:
     , base        >=4.12 && <5
-    , megaparsec  >=7    && <8
+    , megaparsec  >=7    && <9
     , text
 
 library
   import:          commons
   hs-source-dirs:  lib
   exposed-modules: Data.Org
-  build-depends:   parser-combinators ^>=1.1
+  build-depends:   parser-combinators >=1.1 && <1.3
 
 test-suite org-mode-test
   import:         commons
@@ -39,6 +39,6 @@ test-suite org-mode-test
   ghc-options:    -threaded -rtsopts -with-rtsopts=-N
   build-depends:
     , org-mode
-    , tasty        ^>=1.2
-    , tasty-hunit  ^>=0.10
     , pretty-simple
+    , tasty          ^>=1.2
+    , tasty-hunit    ^>=0.10
