--- a/org-mode.cabal
+++ b/org-mode.cabal
@@ -24,6 +24,7 @@ common commons
     , base        >=4.12 && <5
     , megaparsec  >=7    && <9
     , text
+    , time        ^>=1.9
 
 library
   import:          commons
