Widen time bounds

--- a/org-mode/org-mode.cabal
+++ b/org-mode/org-mode.cabal
@@ -24,7 +24,7 @@ common commons
     , base        >=4.12 && <5
     , megaparsec  >=7    && <9
     , text
-    , time        ^>=1.9
+    , time        >=1.8 && < 1.10
 
 library
   import:          commons
