--- a/org-mode/org-mode.cabal
+++ b/org-mode/org-mode.cabal
@@ -24,13 +24,15 @@ common commons
     , base        >=4.12 && <5
     , megaparsec  >=7    && <9
     , text
-    , time        >=1.8 && < 1.10
+    , time        >=1.8  && <1.10
 
 library
   import:          commons
   hs-source-dirs:  lib
   exposed-modules: Data.Org
-  build-depends:   parser-combinators >=1.1 && <1.3
+  build-depends:
+    , filepath
+    , parser-combinators  >=1.1 && <1.3
 
 test-suite org-mode-test
   import:         commons
@@ -40,5 +42,5 @@ test-suite org-mode-test
   ghc-options:    -threaded -rtsopts -with-rtsopts=-N
   build-depends:
     , org-mode
-    , tasty          ^>=1.2
-    , tasty-hunit    ^>=0.10
+    , tasty        ^>=1.2
+    , tasty-hunit  ^>=0.10
