--- a/org-mode/org-mode.cabal
+++ b/org-mode/org-mode.cabal
@@ -32,6 +32,7 @@ library
   exposed-modules: Data.Org
   build-depends:
     , filepath
+    , hashable            ^>=1.3
     , parser-combinators  >=1.1 && <1.3
 
 test-suite org-mode-test
