--- a/org-mode-lucid/org-mode-lucid.cabal
+++ b/org-mode-lucid/org-mode-lucid.cabal
@@ -22,6 +22,7 @@ common commons
 
   build-depends:
     , base      >=4.12 && <5
+    , hashable  ^>= 1.3
     , lucid     ^>=2.9
     , org-mode  ^>=1.0
     , text
