--- a/org-mode-lucid/org-mode-lucid.cabal
+++ b/org-mode-lucid/org-mode-lucid.cabal
@@ -1,7 +1,9 @@
 cabal-version:      2.2
 name:               org-mode-lucid
 version:            1.1.0
+synopsis:           Lucid integration for org-mode.
 description:        Lucid integration for org-mode.
+category:           Web
 homepage:           https://github.com/fosskers/org-mode
 author:             Colin Woodbury
 maintainer:         colin@fosskers.ca
