--- a/org-mode-lucid/org-mode-lucid.cabal
+++ b/org-mode-lucid/org-mode-lucid.cabal
@@ -21,6 +21,7 @@ common commons
   ghc-options:
     -Wall -Wpartial-fields -Wincomplete-record-updates
     -Wincomplete-uni-patterns -Widentities
+    -funclutter-valid-hole-fits
 
   build-depends:
     , base        >=4.12 && <5
