--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,9 +14,7 @@ jobs:
         uses: actions/setup-haskell@v1.1.2
         with:
           ghc-version: "8.8.3"
-
-      - name: Setup Stack
-        uses: mstksg/setup-stack@v2
+          enable-stack: true
 
       - name: Clone project
         uses: actions/checkout@v2.3.1
