--- a/org-mode/org-mode.cabal
+++ b/org-mode/org-mode.cabal
@@ -7,7 +7,7 @@ category:           Data
 homepage:           https://github.com/fosskers/org-mode
 author:             Colin Woodbury
 maintainer:         colin@fosskers.ca
-copyright:          2020 Colin Woodbury
+copyright:          2020 - 2021 Colin Woodbury
 license:            BSD-3-Clause
 license-file:       LICENSE
 build-type:         Simple
