chore: bump dependencies

--- a/org-mode-lucid/org-mode-lucid.cabal
+++ b/org-mode-lucid/org-mode-lucid.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.2
 name:               org-mode-lucid
-version:            1.6.1
+version:            1.6.2
 synopsis:           Lucid integration for org-mode.
 description:        Lucid integration for org-mode.
 category:           Web
@@ -27,7 +27,7 @@ common commons
     , base        >=4.12 && <5
     , containers  >=0.6
     , hashable    >=1.2  && <1.4
-    , lucid       ^>=2.9
+    , lucid       >=2.9  && < 2.12
     , org-mode    ^>=2.0
     , text
 
